--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "expo": "~44.0.0",
     "expo-cli": "^5.2.0",
     "expo-speech": "~10.1.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "^17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "^0.70.3",
+    "expo-status-bar": "~1.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
