--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
-    "expo": "~44.0.0",
+    "expo": "^46.0.16",
     "expo-cli": "^5.2.0",
     "expo-speech": "~10.1.0",
     "expo-status-bar": "~1.1.0",
@@ -20,7 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "^2.4.1",
+    "react-native-reanimated": "3.0.0-rc.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "~0.18.9",
